Fix fonts. Add test for sample report generating